# parallel-decoder-transformer

./: .gitignore  ANALYSIS.md  IMPLEMENTATION_REVIEW.md  NEXT.md  README.md  microgpt_dnb.py  pyproject.toml
configs/: canonical.yaml  default.yaml  gpt_oss_transfer.yaml  gpt_oss_transfer_production.yaml  pdt_qwen3_4b.yaml
configs/dataset/: notes_gpt41_production.yaml  notes_gpt41_test.yaml
data/: DATASET_PIPELINE.md  README.md  TRAINING.md
docs/: main.tex  references.bib
docs/arxiv_submission/: PAPER.md  arxiv.sty  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
docs/guides/: CIVIL_WAR_WORKED_EXAMPLE.md  DATASET_PIPELINE.md  TRAINING.md
docs/sections/: 00_abstract.tex  02_related_work.tex  06_experiments.tex  07_conclusion.tex  appendix.tex
scripts/: __init__.py  ablate.py  analyze_infer_manifest.py  check_citations.py  check_gpu.py  check_qwen3_config.py  compare_seq_parallel.py  coverage_threshold_sweep.py  download_corpus.sh  download_gpt_oss_20b.sh  evaluate.py  generate_coverage_loss_figure.py  generate_dependency_dataset.py  generate_snapshot_routing_dataset.py  infer.py  logit_replay.py  migrate_checkpoint_05.py  migrate_gate_checkpoint.py  preflight_plans.py  pretty_notes_artifact.py  run_benchmark.sh  run_dataset_pipeline.py  score_infer_notes.py  setup_lambda_gpu.sh  submit_to_hf.py  summarize_infer_manifests.py  train.py  train_wandb.py  validate_dependency_dataset.py
sim/: clustered_rollback.py
src/parallel_decoder_transformer/: __init__.py
src/pdt/: __init__.py  model.py
tests/: conftest.py
tests/integration/: _sectional_test_utils.py  test_curriculum_with_teacher_toggle.py  test_infer_gpt_oss_local.py  (+4 more)
upgrades/: 01_adaptive_gating.md  02_learned_retention.md  03_multihead_coverage.md  04_speculative_invariance_theory.md  05_efficient_instrumentation.md
(+176 files in other folders)
